tests/ui/imports/issue-53565.stderr
error[E0432]: unresolved imports `std::time::foo`, `std::time::bar`, `std::time::buzz`
  --> $DIR/issue-53565.rs:1:17
   |
LL | use std::time::{foo, bar, buzz};
   |                 ^^^  ^^^  ^^^^ no `buzz` in `time`
   |                 |    |
   |                 |    no `bar` in `time`
   |                 no `foo` in `time`

error[E0432]: unresolved imports `std::time::abc`, `std::time::def`
  --> $DIR/issue-53565.rs:3:17
   |
LL | use std::time::{abc, def};
   |                 ^^^  ^^^ no `def` in `time`
   |                 |
   |                 no `abc` in `time`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
